fixing the white bg on admin pages that was getting cut off

--- a/app/assets/stylesheets/alchemy/frame.scss
+++ b/app/assets/stylesheets/alchemy/frame.scss
@@ -105,6 +105,7 @@ div#overlay_text_box {
   z-index: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 #archive_all {
